# weekend_weather

./: README.md  diagram.py  pyproject.toml  requirements.txt  run_get_weather.bat  run_mermaid_diagram.bat  run_weather_api.bat  setup.cfg  setup.py  test_examples.py  weekend_api.py
.github/actions/: action.yml
.github/workflows/: .coveragerc  CI.yml  action.yml  coverage.yml
tests/: test_examples.py
weekend_api/: __main__.py  pyproject.toml  weekend_api.py
